[package]
name = "anne-plotter"
version = "1.0.0"
license = "GPL-3.0"
authors = ["annemedia, forked from Signum Network"]
description = """
anne-plotter - a PoC2 plotter written in Rust
"""
repository = "https://github.com/annemedia/anne-plotter"
documentation = "https://github.com/annemedia/anne-plotter"
keywords = ["anne", "plotter", "rust", "datacurrency"]
readme = "README.md"
edition = "2024"

[features]
opencl = ["ocl-core"]
simd=[]

[dependencies]
crossbeam-channel = "0.3.6"
ocl-core = { version = "0.11.1", optional = true } 
clap = "2.32.0"
raw-cpuid = "6.1.0"
sys-info = "0.6.0"
cfg-if = "0.1.6"
pbr = "1.0.1"
humanize-rs = "0.1.5"
libc = "0.2.97"
rayon = "1.0.3"
core_affinity = "0.5.9"
stopwatch = "0.0.7"
fs2 = "0.4.3"
page_size = "0.4.1"
thread-priority = "3.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std","fileapi","securitybaseapi","errhandlingapi"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"
rustflags = [
    "-C", "link-args=-L/home/guru/win-libs/opencl/x64",
    "-C", "link-args=-lOpenCL",
]


[build-dependencies]
cc = "1.0"

[dev-dependencies]
rust-crypto = "0.2.36"
